# news-fetcher

./: .coveragerc  .gitignore  ARCHITECTURE.md  FEATURES.md  README.md  SKILL.md  STATUS.md  config.yaml  pyproject.toml  pytest.ini  requirements.txt  research.md  test_implementation.py  test_output.py  test_output.txt  test_summarize.py
.github/workflows/: publish-to-clawhub.yml  publish-to-pypi.yml  release.yml
data/claude-code-results/: latest.json  pending-wake.json
docs/: github-project-discovery-design.md  source-strategy-design.md
src/news_fetcher/: __init__.py  __main__.py  cli.py  cluster.py  config.py  dedup.py  diversify.py  exceptions.py  fetch.py  github_enrich.py  github_fetch.py  github_map.py  github_rank.py  models.py  normalize.py  output.py  pipeline.py  rank.py  summarize.py
tests/: conftest.py  test_cli.py  test_cluster.py  test_config.py  test_dedup.py  test_diversify.py  test_e2e.py  test_fetch.py  test_github_enrich.py  test_github_map.py  test_github_rank.py  test_normalize.py  test_output.py  test_pipeline.py  test_rank.py  test_summarize.py
tests/fixtures/: bbc_sample.xml  github_trending_sample.html  html_frontpage_ordered_sample.html  reuters_sample.xml
